fix: Prioritize crawling user added links over bulk imports. fixes #1717
