# packages/open-api/karakeep-openapi-spec.json
@@ -686,6 +686,13 @@
                       "createdAt": {
                         "type": "string",
                         "nullable": true
+                      },
+                      "crawlPriority": {
+                        "type": "string",
+                        "enum": [
+                          "low",
+                          "normal"
+                        ]
                       }
                     }
                   },
